# rust-backend-nuxt4-frontend-template

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml  grafana-datasources.yaml  mimir.yaml  nginx.conf  otel-collector-config.yaml  package-lock.json  tempo.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml
frontend/: .dockerignore  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/assets/css/: main.css
frontend/components/: LexicalEditor.vue  Navbar.vue  NotificationCenter.vue  Sidebar.vue
frontend/composables/: useApi.ts  useNotifications.ts  usePreferences.ts
frontend/layouts/: default.vue
frontend/locales/: en.json  es.json  pt.json
frontend/pages/: admin-preferences.vue  components.vue  index.vue  preferences.vue  support.vue
frontend/pages/admin/: roles.vue  users.vue
frontend/plugins/: auth-token.client.ts  flowbite.client.ts  theme-init.client.ts
frontend/public/: theme-init.js
frontend/utils/: mockData.ts
migrations/: 001_create_users_table.sql  001_initial_schema.sql  002_create_app_settings_table.sql  002_create_roles_and_permissions.sql  003_add_multi_tenancy.sql  004_add_organization_to_app_settings.sql
src/: main.rs  middleware.rs  migrations.rs  models.rs
src/handlers/: admin.rs  mod.rs  system.rs
tools/jwt-generator/: Cargo.toml  README.md
tools/jwt-generator/src/: main.rs
